shim/third-party/rust/vendor/trybuild-1.0.69/tests/ui/compile-fail-2.stderr
error: ERROR
 --> tests/ui/compile-fail-2.rs:1:1
  |
1 | compile_error!("ERROR");
  | ^^^^^^^^^^^^^^^^^^^^^^^
